# WebAndTools

Exchange_rate/: currency_service.py  main.py  requirements.txt  server.py  utils.py
FastAPI/: pyproject.toml  requirements.txt
FastAPI/contacts_api/: alembic.ini  pyproject.toml
FastAPI/contacts_api/contacts_api/: database.py  main.py  models_contact.py  schemas.py
FastAPI/contacts_api/contacts_api/repository/: contacts.py
FastAPI/contacts_api/contacts_api/routes/: contacts.py
FastAPI/contacts_api/migrations/: env.py
NoSQL/NoSQL/: authors.json  load_date.py  models.py  search_quotes.py
Quotes App/Django__Project/: pyproject.toml
Quotes App/Django__Project/notes/: exported_authors.json  exported_quotes.json  migrate_data.py
Quotes App/Django__Project/notes/notes/: settings.py  urls.py
Quotes App/Django__Project/notes/quotes_app/: models.py  urls.py  views.py
Quotes App/Django__Project/notes/quotes_app/migrations/: 0001_initial.py  0002_alter_author_born_location_alter_author_fullname_and_more.py  0003_alter_author_fullname.py  0004_tag.py
Quotes App/Django__Project/notes/quotes_app/static/css/: style.css
Quotes App/Django__Project/notes/quotes_app/templates/quotes/: base.html  index.html
Quotes App/Django__Project/notes/quotes_app/templates/quotes_app/: author_detail.html  authors.html  home.html  login.html  quotes.html  register.html  tag_detail.html
SQLAlchemy/: my_select.py  requirements.txt  seed.py
Webapps/: Dockerfile  docker-compose.yml  main.py
scraper_project/: load_date.py  main.py  requirements.txt  search_quotes.py
(+36 files in other folders)
